seal for tmp
Signed-off-by: Sam Gammon <sam@elide.dev>